# Functional

./: matrix.hs
1/: README.txt  hw1.cabal
1/src/: TicTacToe.lhs
1/test/: TicTacToeSpec.hs
2/: README.txt  hw2.cabal
2/src/: Monoids.lhs
2/test/: MonoidSpec.hs
