name: hw2
version: 1.1.0.0
synopsis: CS457/557 Winter 2020 Homework 2
license: BSD3
license-file: LICENSE
author: Katie Casamento
maintainer: cas28@pdx.edu
copyright: Katie Casamento
category: Homework
build-type: Simple
cabal-version: >=1.10
extra-source-files: README.txt

library
  exposed-modules: Monoids
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -fwarn-incomplete-patterns -fwarn-incomplete-uni-patterns
  build-depends: base >= 4.9 && < 5
  default-extensions: DeriveTraversable DeriveGeneric

test-suite spec
  type: exitcode-stdio-1.0
  default-language: Haskell2010
  hs-source-dirs: test
  ghc-options: -fwarn-incomplete-patterns -fwarn-incomplete-uni-patterns
  other-modules: MonoidSpec
  main-is: Spec.hs
  build-depends: base >=4.9 && <5, generic-arbitrary, hspec, QuickCheck, hw2
  default-extensions:
    AllowAmbiguousTypes ScopedTypeVariables RankNTypes TypeApplications
